# blitz-quote-engine2

./: .env  .gitattributes  .gitignore  .replit  CLAUDE.md  README.md  add_carrier.py  add_discount_category.py  add_table.py  april_17_changes.md  april_21_changes.md  april_23_changes.md  april_28_changes.md  async_csg.py  build_carrier_db.py  build_csv_to_duckdb.py  build_db_new.py  build_duckdb.py  build_duckdb_modified.py  build_new.py  build_optimized_db_combinations.py  carrier_selections.json  check_script.py  compare_databases.py  config.py  copy_data_forward.py  date_utils.py  db_files.txt  db_operations_log.py  delete_state.sh  detect_upcoming_rate_changes.py  download_gdrive.py  effective_date_test_results.json  filter_utils.py  fix_missing_rates.py  get_supported_carriers.py  hello.py  humana_by_state.json  humana_lookup.py  humana_naics.json  (+52 more)
Medicare Supplement Data Feed - SAMPLE/: Field Descriptions.xls  UW Sample.csv  rates.csv  rates_ma_mn_wi.csv  zip_codes.csv
Medicare Supplement Data Feed - SAMPLE/Field Descriptions/: Fields-Table 1.csv  MA_MN_WI_Plans-Table 1.csv
app/: database.py  main.py  models.py
app/routers/: quotes.py
cl/: carrier_selections.json  gai.txt  prompt.txt
maxquotetemp/: repomix-output.txt
