[project]
name = "blitz-quote-engine2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "aiolimiter>=1.2.1",
    "asyncio>=3.4.3",
    "babel>=2.16.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "libsql-experimental>=0.0.41",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.10.1",
    "sqlalchemy-libsql>=0.1.0",
    "thefuzz[speedup]>=0.22.1",
    "toolz>=1.0.0",
    "uvicorn>=0.32.1",
]
